lighthouse report fixes

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-	"name": "Simple PWA",
-	"short_name": "Simple PWA",
+	"name": "ECOTIME",
+	"short_name": "ECOTIME",
 	"display": "standalone",
 	"start_url": "./?utm_source=pwa_install",
 	"scope": ".",
